Add types and functions notes

--- a/config/math-operators.tex
+++ b/config/math-operators.tex
@@ -89,3 +89,6 @@
 
 \newcommand{\Code}[1]{\texttt{#1}}
 \newcommand{\MCode}[1]{\mathtt{#1}}
+
+\newcommand{\Category}[1]{\textsc{#1}}
+\newcommand{\MCategory}[1]{{\normalfont\textsc{#1}}}
