--- a/main.tex
+++ b/main.tex
@@ -18,6 +18,7 @@
 
 \input{content/preface.tex}
 \input{content/fundamentals.tex}
+\input{content/types-and-functions.tex}
 
 \newpage
 \printbibliography
