Add types and functions notes

--- a/content/types-and-functions.tex
+++ b/content/types-and-functions.tex
@@ -88,3 +88,33 @@
         \item Pure functions returning a \mintinline{hs}{Bool} are \textit{predicates}.
     \end{itemize}
 \end{definition}
+
+\begin{remark}
+    It is possible to draw morphisms between objects of a category where the objects are the types
+    \begin{enumerate}
+        \item \mintinline{hs}{Void}
+        \item \mintinline{hs}{()}
+        \item \mintinline{hs}{Bool}
+    \end{enumerate}
+    
+    \begin{figure}[H]
+        \centering
+        \begin{tikzcd}
+            \mintinline{hs}{Void} \arrow[rr, bend left, "\mathtt{absurd}"] \arrow[rd, swap, bend right, "\mathtt{absurd}"]
+            &
+            & \mintinline{hs}{()} \arrow[ld, bend left, "\mathtt{value}"] \arrow[loop right, "\mathtt{unit}"] \\
+            & \mintinline{hs}{Bool} \arrow[ru, bend left, "\mathtt{unit}"] \arrow[loop below, "\mathtt{predicate}"]
+            & 
+        \end{tikzcd}
+        \caption{Morphisms between \mintinline{hs}{Void}, \mintinline{hs}{()} and \mintinline{hs}{Bool}.}
+        \label{fig:morphism-between-types}
+    \end{figure}
+    
+    What do these functions mean? Do they even exist?
+    \begin{itemize}
+        \item \mintinline{hs}{() -> ()}
+        \item \mintinline{hs}{Void -> Void}
+        \item \mintinline{hs}{() -> Void}
+        \item \mintinline{hs}{Bool -> Void}
+    \end{itemize}
+\end{remark}
