Add categories of various shapes and sizes notes

--- a/config/math-operators.tex
+++ b/config/math-operators.tex
@@ -92,3 +92,4 @@
 
 \newcommand{\Category}[1]{\textsc{#1}}
 \newcommand{\MCategory}[1]{{\normalfont\textsc{#1}}}
+\newcommand{\HomSet}[2]{\mathrm{Hom}_{#1}(#2)}
