--- a/main.tex
+++ b/main.tex
@@ -19,6 +19,7 @@
 \input{content/preface.tex}
 \input{content/fundamentals.tex}
 \input{content/types-and-functions.tex}
+\input{content/categories-shapes-and-sizes.tex}
 
 \newpage
 \printbibliography
