Updates from Overleaf

--- a/references.bib
+++ b/references.bib
@@ -1,6 +1,7 @@
 @book{catprog,
     author  = "Bartosz Milewski",
     title   = "Category Theory for Programmers",
-    date    = "2017",
-    edition = "Version 0.1"
+    date    = "2019",
+    edition = "Version 1.2.1",
+    url     = "https://github.com/hmemcpy/milewski-ctfp-pdf"
 }
