Add Writer category

--- a/main.tex
+++ b/main.tex
@@ -20,6 +20,7 @@
 \input{content/fundamentals.tex}
 \input{content/types-and-functions.tex}
 \input{content/categories-shapes-and-sizes.tex}
+\input{content/kleisli-categories.tex}
 
 \newpage
 \printbibliography
