Add initial object subsection

--- a/main.tex
+++ b/main.tex
@@ -21,6 +21,7 @@
 \input{content/types-and-functions.tex}
 \input{content/categories-shapes-and-sizes.tex}
 \input{content/kleisli-categories.tex}
+\input{content/products-coproducts.tex}
 
 \newpage
 \printbibliography
